# message-splitter

./: README.md  msg_split.py  pyproject.toml  script_split_msg.py
tests/: test_split.py
