[project]
name = "text-splitter"
version = "0.1.0"
description = "A Python package for splitting HTML content into smaller fragments."
authors = [
    {name = "deonira",email = "mada_050397@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.12.3,<5.0.0)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
